--- a/_pgbackup/casa2/index_1696448616.html
+++ b/_pgbackup/casa2/index_1696448616.html
@@ -38,8 +38,7 @@
 </div>
                                 <!-- /.top-bar-content -->                                 
                                 <div class="top-bar-socials"> 
-                                    <div class="inner"> <span class="text">Idiomas:</span>
-                                        <span class="icons"><a>SPA</a> <a>ENG</a> </span> 
+                                    <div class="inner"> <span class="text">Idiomas:</span><span class="icons"><a class="current-menu-item" href="index.html">SPA</a> <a href="Ingles.html">ENG</a> </span> 
                                     </div>                                     
                                 </div>
                                 <!-- /.top-bar-socials -->                                 
@@ -61,15 +60,15 @@
                                 <!-- /.mobile-button -->                                 
                                 <nav id="main-nav" class="main-nav"> 
                                     <ul id="menu-primary-menu" class="menu"> 
-                                        <li class="menu-item menu-item-has-children current-menu-item"> <a href="index.html">INICIO</a> 
+                                        <li class="menu-item menu-item-has-children current-menu-item"> <a class="translatable mayus" href="index.html">Inicio</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children"> <a href="quien.html">QUIÉNES SOMOS</a> 
+                                        <li class="menu-item menu-item-has-children"> <a class="translatable mayus" href="quien.html">Quiénes somos</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children"> <a href="marcas.html">NUESTRAS MARCAS</a> 
+                                        <li class="menu-item menu-item-has-children"> <a class="translatable mayus" href="marcas.html">Nuestras Marcas</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children"> <a href="responsabilidad.html">RESPONSABILIDAD SOCIAL</a> 
+                                        <li class="menu-item menu-item-has-children"> <a class="translatable mayus" href="responsabilidad.html">Responsabilidad Social</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children"> <a href="contacto.html">CONTACTO</a> 
+                                        <li class="menu-item menu-item-has-children"> <a class="translatable mayus" href="contacto.html">Contacto</a> 
                                         </li>                                         
                                     </ul>                                     
                                 </nav>
@@ -86,7 +85,7 @@
                 <!-- Main Content -->                 
                 <div id="main-content" class="site-main clearfix"> 
                     <div class="newclass">
-                        <p> Establecido en el estado de Oaxaca, México. Mezcales Casa Armando es un productor de mezcal líder en innovación y responsabilidad social. </p>
+                        <p class="translatable "> Establecido en el estado de Oaxaca, México. Mezcales Casa Armando es un productor de mezcal líder en innovación y responsabilidad social. </p>
                         <img src="assets/img/firma.png" class="block imgs" style="margin-top: 1vh;"></img> 
                         <img src="assets/img/simbolo.png" class="block2" style="margin-top: 82px;"></img> 
                     </div>
@@ -128,21 +127,20 @@
                         <div class="bottom-bar-inner-wrap"> 
                             <!-- /.bottom-bar-content -->                             
                             <div class="bottom-bar-content"> 
-                                <div id="copyright">
-                                    <span class="text"><a href="#" class="text-accent">©2020&nbsp;</a>EVITE EL EXCESO&nbsp;&nbsp;&nbsp;EL ABUSO EN EL CONSUMO DE ESTE PRODUCTO ES PERJUDICIAL PARA LA SALUD </span> 
+                                <div id="copyright"><span class="translatable" class="text"><a href="#" class="translatable text-accent">©2020&nbsp;</a>EVITE EL EXCESO&nbsp;&nbsp;&nbsp;EL ABUSO EN EL CONSUMO DE ESTE PRODUCTO ES PERJUDICIAL PARA LA SALUD </span> 
                                 </div>                                 
                             </div>
                             <div class="bottom-bar-menu"> 
                                 <ul class="bottom-nav"> 
-                                    <li class="menu-item current-menu-item"> <a href="index.html">INICIO</a> 
+                                    <li class="menu-item current-menu-item"> <a class="translatable" href="index.html">INICIO</a> 
                                     </li>                                     
-                                    <li class="menu-item"> <a href="quien.htnml">QUIÉNES SOMOS</a> 
+                                    <li class="menu-item"> <a class="translatable" href="quien.htnml">QUIÉNES SOMOS</a> 
                                     </li>                                     
-                                    <li class="menu-item"> <a href="marcas.html">NUESTRAS MARCAS</a> 
+                                    <li class="menu-item"> <a class="translatable" href="marcas.html">NUESTRAS MARCAS</a> 
                                     </li>                                     
-                                    <li class="menu-item"> <a href="responsabilidad.html">RESPONSABILIDAD SOCIAL</a> 
+                                    <li class="menu-item"> <a class="translatable" href="responsabilidad.html">RESPONSABILIDAD SOCIAL</a> 
                                     </li>                                     
-                                    <li class="menu-item"> <a href="contacto.html">CONTACTO</a> 
+                                    <li class="menu-item"> <a class="translatable" href="contacto.html">CONTACTO</a> 
                                     </li>                                     
                                 </ul>                                 
                             </div>
