--- a/_pgbackup/casa2/responsabilidad_1696448616.html
+++ b/_pgbackup/casa2/responsabilidad_1696448616.html
@@ -12,6 +12,7 @@
         <!-- Mobile Specific Metas -->         
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
         <!-- Theme Style -->         
+        <link href="../css/theme.css" rel="stylesheet" type="text/css">
         <link href="../../../../Casa%2525252520Armando%2525252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../../../../Casa%252520Armando%252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../css/theme.css" rel="stylesheet" type="text/css">
@@ -64,13 +65,13 @@
                                     <ul id="menu-primary-menu" class="menu"> 
                                         <li class="menu-item menu-item-has-children"> <a href="index.html">INICIO</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children "> <a href="page-about.html">QUIÉNES SOMOS</a> 
+                                        <li class="menu-item menu-item-has-children "> <a href="quien.html">QUIÉNES SOMOS</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children"> <a href="page-services.html">NUESTRAS MARCAS</a> 
+                                        <li class="menu-item menu-item-has-children"> <a href="marcas.html">NUESTRAS MARCAS</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children current-menu-item"> <a href="page-projects.html">RESPONSABILIDAD SOCIAL</a> 
+                                        <li class="menu-item menu-item-has-children current-menu-item"> <a href="responsabilidad.html">RESPONSABILIDAD SOCIAL</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children"> <a href="page-contact.html">CONTACTO</a> 
+                                        <li class="menu-item menu-item-has-children"> <a href="contacto.html">CONTACTO</a> 
                                         </li>                                         
                                     </ul>                                     
                                 </nav>
@@ -93,9 +94,7 @@
                                     <div class="newclass5">
                                         <p style="font-weight: 700; font-size: 37px; line-height: 46px; font-style: italic; color: #424040;"> Estamos orgullosos de apoyar a la comunidad Oaxaqueña de distintas maneras:</p>
                                         <p>Con nuestra Fundación Agave y Nosotros que se enfoca en beneficiar y promover a artistas y artesanos locales. <br><br>Con la Fundación Don Antonio Rivera Venegas, que ofrece servicios básicos tales como atención médica; ayuda ante desastres naturales; capacitación sobre agronomía; comedor comunitario, así como el Centro de Formación Boxístico Municipal.</p> 
-                                        <div class="button_agave">
-                                            <img href="#" class="imgfdarv" src="assets/img/Recurso2.png"></img>
-                                            <img href="#" class="imgfdarv" src="assets/img/Recurso1.png"></img>
+                                        <div class="button_agave"><a class="imgfdarv" href="https://fundaciondonantonio.org.mx/" target="_blank"> <img src="assets/img/Recurso2.png" alt="Description for Image"> </a><a class="imgfdarv" href="http://fundacionelagaveynosotros.com/" target="_blank"> <img src="assets/img/Recurso1.png" alt="Description for Image"> </a>
                                         </div>
                                         <img src="assets/img/simbolo.png" class="block2" style="margin-top: 82px;"></img> 
                                     </div>
@@ -142,15 +141,15 @@
                             <!-- /.bottom-bar-content -->                             
                             <div class="bottom-bar-menu"> 
                                 <ul class="bottom-nav"> 
-                                    <li class="menu-item"> <a href="home.html">INICIO</a> 
+                                    <li class="menu-item"> <a href="index.html">INICIO</a> 
                                     </li>                                     
-                                    <li class="menu-item "> <a href="page-about.htnml">QUIÉNES SOMOS</a> 
+                                    <li class="menu-item "> <a href="quien.html">QUIÉNES SOMOS</a> 
                                     </li>                                     
-                                    <li class="menu-item"> <a href="page-services.html">NUESTRAS MARCAS</a> 
+                                    <li class="menu-item"> <a href="marcas.html">NUESTRAS MARCAS</a> 
                                     </li>                                     
-                                    <li class="menu-item current-menu-item"> <a href="page-projects.html">RESPONSABILIDAD SOCIAL</a> 
+                                    <li class="menu-item current-menu-item"> <a href="responsabilidad.html">RESPONSABILIDAD SOCIAL</a> 
                                     </li>                                     
-                                    <li class="menu-item"> <a href="page-contact.html">CONTACTO</a> 
+                                    <li class="menu-item"> <a href="contacto.html">CONTACTO</a> 
                                     </li>                                     
                                 </ul>                                 
                             </div>
